# Rust-One-Page-Website

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  tests.rs
static/css/: main.css
static/js/: main.js
templates/: 404.html.tera  base.html.tera  home.html.tera
